# Trajetoria-Python

./: blocos.py  sintaxe.py  variaves.py
Desenvolvimento de APIs com Flask/dio-bank/: app.py
desenvolvimento-de-APIs-com-Flask/: pyproject.toml
desenvolvimento-de-APIs-com-Flask/dio-bank/src/: app.py
tipos_variaveis/: numeros.py  texto.py
