[project]
name = "desenvolvimento-apis-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrik Oliveira",email = "145878752+Oliv-Patrik@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
